Fix T49608: runtime-only particle's boid->ground Object pointer was left dangling to invalid value in read code...